--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Birthday, Praveen</title>
+    <title>Happy Birthday, Praveen!</title>
     <meta charset="utf-8" />
     <meta name="language" content="en-us" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
