--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
     </style>
 
-    <link href="css/style1.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
@@ -45,7 +45,7 @@
     <script type="text/javascript" src="js/hbd.js"></script>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css"
+      href="css/theme.css"
     />
   </head>
 
@@ -84,9 +84,9 @@
 					<span class="comments">// Forever and ever. I wish</span><br />
 					while(true){</br>
 					<span class="comments">// luckiness,</span><br />
-					you.fortune ++;</br>
+            you.fortune ++;</br>
 					<span class="comments">// happiness,</span><br />
-					you.happiness ++;</br>
+					  you.happiness ++;</br>
 					<span class="comments">// and everything you wish can be achieved.</span><br />
 					}.start()</br>
 					<span class="comments">// The last thing I wanna say:</span><br />
