--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Birthday, Praveen!</title>
+    <title>Happy Birthday, Rajneesh!</title>
     <meta charset="utf-8" />
     <meta name="language" content="en-us" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -70,7 +70,7 @@
 					<span class="space"/><span class="comments">* Today, the 12th day of December, is your birthday.</span><br />
 					<span class="space"/><span class="comments">* So I created a webpage to celebrate this special day.</span><br />
 					<span class="space"/><span class="comments">*/</span><br />
-					Boy you = <span class="keyword">new</span> Boy(<span class="string">"Praveen"</span>);<br />
+					Boy you = <span class="keyword">new</span> Boy(<span class="string">"Rajneesh"</span>);<br />
 					<span class="comments">// December 12th, when the bell rang, your age increased </span><br />
 					Date currentTime = <span class="keyword">new</span> Date(); <br />
 					SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
@@ -102,7 +102,7 @@
 			<div class="columns">
 				<div class="column is-12" id="copyright">
 					<center>
-						<p>Made with love by <a href="sem1colon.github.io" target="_blank">Prashanthi</a></p>
+						<p>Made with love by <a href="sem1colon.github.io" target="_blank">Nidhi</a></p>
 					</center>
 				</div>
 			</div>
